LPS-50124 Bookmarks 'Visits' is now aligned correctly

--- a/portal-web/docroot/html/css/portal/asset_column.css
+++ b/portal-web/docroot/html/css/portal/asset_column.css
@@ -37,6 +37,7 @@
 	.lfr-asset-icon {
 		border-right: 1px solid transparent;
 		float: left;
+		line-height: 14px;
 		margin-right: 10px;
 		padding-right: 10px;
 
